sandc/test/fixtures/astRegression/shouldFail/productions/switchExpression/EmptyElseBody.sand
pub class EmptyElseBody {
    foo() {
        (
            switch val {
                case a {
                    b()
                }
                
                else {

                }
            }
        )
    }
}